--- a/mcs/mcs.csproj
+++ b/mcs/mcs.csproj
@@ -5,8 +5,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	<DebugType>None</DebugType>
-        <DebugSymbols>false</DebugSymbols>
-        <Configurations>Debug;Release;Release_net35</Configurations>
+    <DebugSymbols>false</DebugSymbols>
+    <Configurations>Debug;Release;Debug_net35;Release_net35</Configurations>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DefineConstants>TRACE;DEBUG;NET_2_0;NET_6</DefineConstants>
@@ -14,10 +14,16 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DefineConstants>TRACE;NET_2_0,PERMISSIVE;BOOTSTRAP_BASIC;NET_6</DefineConstants>
   </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release_net35|AnyCPU' ">
-        <DefineConstants>TRACE;NET_2_0,PERMISSIVE;BOOTSTRAP_BASIC;NET_35</DefineConstants>
-        <TargetFramework>net35</TargetFramework>
-    </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug_net35|AnyCPU' ">
+    <DefineConstants>TRACE;DEBUG;NET_2_0,PERMISSIVE;BOOTSTRAP_BASIC;NET_35</DefineConstants>
+    <TargetFramework>net35</TargetFramework>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release_net35|AnyCPU' ">
+    <DefineConstants>TRACE;NET_2_0,PERMISSIVE;BOOTSTRAP_BASIC;NET_35</DefineConstants>
+    <TargetFramework>net35</TargetFramework>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <OutputPath>bin\x64\Debug\</OutputPath>
     <DefineConstants>TRACE;DEBUG;NET_2_0,PERMISSIVE;BOOTSTRAP_BASIC</DefineConstants>
