--- a/.gitignore
+++ b/.gitignore
@@ -578,9 +578,6 @@ crashlytics-build.properties
 fabric.properties
 
 # Editor-based Rest Client
-.idea/httpRequests
-
-# Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
+.idea/
 
 # End of https://www.gitignore.io/api/rider
